--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="lead float-left">Very enthusiastic about VR. <br/></p>
 
         <button type="button" class="btn btn-outline-light float-sm-right" onclick="window.open('static/karim_stock_cv.pdf')">
-          <svg id="i-download" viewBox="0 0 32 32" width="22" height="22" color=#ffffff fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+          <svg id="i-download" viewBox="0 0 32 32" height="22px" color=#ffffff fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
               <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30" />
           </svg>
           Download CV</button>
@@ -127,14 +127,14 @@
             <span class="badge badge-pill badge-dark ">Java</span>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://github.com/khstock/zwinder-app' ; ">
-                <svg id="i-github " viewBox="0 0 64 64 " width="18 " height="19 ">
+                <svg id="i-github " viewBox="0 0 64 64" height="18px">
                     <path stroke-width="0 " fill="currentColor " d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12
           42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z " />
                 </svg>
                 Project Source</button>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/eBUVMyqWFP0' ; ">
-                  <svg id="i-external " viewBox="0 0 32 32 " width="18 " height="18 " fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                  <svg id="i-external " viewBox="0 0 32 32" height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                     <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                   </svg>
                     Demo</button>
@@ -195,7 +195,7 @@
             <span class="badge badge-pill badge-dark ">C# </span>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/wzUj0rRv4vU' ; ">
-                  <svg id="i-external " viewBox="0 0 32 32 " width="18 " height="18 " fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                  <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                     <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                   </svg>
                     Demo Video</button>
@@ -229,7 +229,7 @@
 
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="window.open('static/karim_stock_flow_visualization_bachelor_thesis.pdf')">
-              <svg id="i-download " viewBox="0 0 32 32 " width="22 " height="22 " fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+              <svg id="i-download " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                   <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30 " />
                 </svg>
                 Documentation</button>
@@ -264,7 +264,7 @@
             <span class="badge badge-pill badge-dark ">C# </span>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/uKmA7DxY9tE' ; ">
-                  <svg id="i-external " viewBox="0 0 32 32 " width="18 " height="18 " fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                  <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                     <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                   </svg>
                     Demo Video</button>
