--- a/index.html
+++ b/index.html
@@ -64,7 +64,19 @@
               <p><b>Education</b>: <br/>B.Sc. Media Informatics, University of Applied Sciences Kaiserslautern</p>
             </div>
             <div class="col-md-6">
-              <p><b>Skills</b>: <br/>B.Sc. Media Informatics, University of Applied Sciences Kaiserslautern</p>
+              <p><b>Skills</b>: <br/>
+                <span class="badge badge-primary">Unity</span>
+                <span class="badge badge-primary">SteamVR</span>
+                <span class="badge badge-primary">Bootstrap</span>
+                <span class="badge badge-primary">Android</span>
+                <span class="badge badge-primary">Firebase</span>
+                <span class="badge badge-primary">SQL</span>
+                <span class="badge badge-primary">C#</span>
+                <span class="badge badge-primary">Java</span>
+                <span class="badge badge-primary">JavaScript</span>
+                <span class="badge badge-primary">HTML</span>
+                <span class="badge badge-primary">CSS</span>
+              </p>
             </div>
           </div>
         </div>
