Bachelor Demo Video

--- a/index.html
+++ b/index.html
@@ -239,12 +239,16 @@
             <span class="badge badge-pill badge-dark ">VR</span>
             <span class="badge badge-pill badge-dark ">C#</span>
 
-
             <button type="button " class="btn btn-light btn-sm float-right " onclick="window.open('static/karim_stock_flow_visualization_bachelor_thesis.pdf')">
               <svg id="i-download " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                   <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30 " />
                 </svg>
                 Documentation</button>
+            <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://www.youtube.com/watch?v=H6mwCCYqlZo' ; ">
+                <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                  <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
+                </svg>
+                Demo Video</button>
           </div>
         </div>
       </div>
