--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
     <main role="main" class="inner-cover" id="home">
       <h0>karim stock</h0>
-      <p class="lead">vr / unity / web / student</p>
+      <p class="lead">ar / vr / unity / web / student</p>
       <p class="lead">
       </p>
     </main>
 
     <div class="jumbotron jumbotron-fluid rounded">
       <div class="container">
-        <p class="lead">I'm a 23-year-old computer science student at <b>University of Applied Sciences Kaiserslautern</b>, Germany. Currently working towards my master's.</p>
-        <p class="lead float-left">Very enthusiastic about VR. <br/></p>
+        <p class="lead" align="justify">I'm <b>Karim</b>, 24 years old, XR developer and studying computer science at <b>University of Applied Sciences Kaiserslautern</b>, Germany. Currently working on my master's thesis at <b>Bürkert GmbH & Co. KG</b>.</p>
+        <p class="lead float-left">Very enthusiastic about Mixed Reality.<br/></p>
 
         <button type="button" class="btn btn-outline-light float-sm-right" onclick="window.open('static/karim_stock_cv.pdf')">
           <svg id="i-download" viewBox="0 0 32 32" height="22px" color=#ffffff fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -61,10 +61,13 @@
           <hr>
           <div class="row">
             <div class="col-md-6">
-              <p><b>Education</b>: <br/>B.Sc. Media Informatics, University of Applied Sciences Kaiserslautern</p>
+              <p align="justify"><b>Education</b>: <br/>M.Sc. Computer Science, University of Applied Sciences Kaiserslautern, <i>Mar 2019</i></p>
+              <p align="justify">B.Sc. Media Informatics, University of Applied Sciences Kaiserslautern, Dec 2016</p>
             </div>
             <div class="col-md-6">
               <p><b>Skills</b>: <br/>
+                <span class="badge badge-primary">XR</span>
+                <span class="badge badge-primary">MRTK</span>
                 <span class="badge badge-primary">Unity</span>
                 <span class="badge badge-primary">SteamVR</span>
                 <span class="badge badge-primary">Bootstrap</span>
@@ -86,6 +89,72 @@
     <div class="text-center">
       <h4 id="projects">Projects</h4>
       <h4>---</h4>
+    </div>
+
+    <div class="project shadow mb-5 rounded bg-white ">
+      <div class="row ">
+        <div class="col-sm-12 col-md-4 ">
+          <div class="inner-project rounded d-none d-md-block " style="background-image:url( 'src/master.jpg' ); background-size: cover ">
+            <img src="src/overlay.svg " height=220px class="float-right " alt="SVG in einem image Tag ">
+          </div>
+        </div>
+        <div class="col-sm-0 col-md-8 ">
+          <div class="inner-project p-3 ">
+            <div class="row ">
+              <div class="col-10 ">
+                <h4>AR maintenance assistance</h4>
+              </div>
+              <div class="col-2 ">
+                <p class="text-right "><i>Mar 2019</i></p>
+              </div>
+            </div>
+            <p>Real-time visualization of assisting data for maintenance featuring remote collaboration. Project is being developed at <b>Bürkert Fluid Control Systems</b> using the HoloLens.</p>
+            <span class="badge badge-pill badge-light">WIP</span>
+            <span class="badge badge-pill badge-dark ">MRTK</span>
+            <span class="badge badge-pill badge-dark ">Unity</span>
+            <span class="badge badge-pill badge-dark ">Vuforia</span>
+            <span class="badge badge-pill badge-dark ">3D</span>
+            <span class="badge badge-pill badge-dark ">AR</span>
+            <span class="badge badge-pill badge-dark ">C#</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project shadow mb-5 rounded bg-white ">
+      <div class="row ">
+        <div class="col-sm-12 col-md-4 ">
+          <div class="inner-project rounded d-none d-md-block " style="background-image:url( 'src/web.jpg' ); background-size: cover ">
+            <img src="src/overlay.svg " height=220px class="float-right " alt="SVG in einem image Tag ">
+          </div>
+        </div>
+        <div class="col-sm-0 col-md-8 ">
+          <div class="inner-project p-3 ">
+            <div class="row ">
+              <div class="col-10 ">
+                <h4>Web portfolio</h4>
+              </div>
+              <div class="col-2 ">
+                <p class="text-right ">Aug 2018</p>
+              </div>
+            </div>
+            <p>Design and coding of this single page portfolio website displaying various different projects using <b>Bootstrap</b> and <b>Particle.js</b>. Full project can be found on GitHub.</p>
+            <span class="badge badge-pill badge-dark ">Web</span>
+            <span class="badge badge-pill badge-dark ">Bootstrap</span>
+            <span class="badge badge-pill badge-dark ">HTML</span>
+            <span class="badge badge-pill badge-dark ">CSS</span>
+            <span class="badge badge-pill badge-dark ">JS</span>
+
+            <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://github.com/khstock/WEB-Portfolio' ; ">
+                <svg id="i-github " viewBox="0 0 64 64" height="18px">
+                    <path stroke-width="0 " fill="currentColor " d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12
+          42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z " />
+                </svg>
+                Source</button>
+
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="project shadow mb-5 rounded bg-white ">
@@ -135,7 +204,7 @@
             </div>
             <p>Android dating app using NoSQL Firebase Queries. UI and card swipe effect highly influenced by Tinder. Developed using Android-Studio, completely written in Java.</p>
             <span class="badge badge-pill badge-dark ">Android</span>
-            <span class="badge badge-pill badge-dark ">2D</span>
+            <span class="badge badge-pill badge-dark ">NoSQL</span>
             <span class="badge badge-pill badge-dark ">Java</span>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://github.com/khstock/zwinder-app' ; ">
@@ -143,7 +212,7 @@
                     <path stroke-width="0 " fill="currentColor " d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12
           42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z " />
                 </svg>
-                Project Source</button>
+                Source</button>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/eBUVMyqWFP0' ; ">
                   <svg id="i-external " viewBox="0 0 32 32" height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
@@ -210,7 +279,7 @@
                   <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                     <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                   </svg>
-                    Demo Video</button>
+                    Demo</button>
           </div>
         </div>
       </div>
@@ -248,7 +317,7 @@
                 <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                   <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                 </svg>
-                Demo Video</button>
+                Demo</button>
           </div>
         </div>
       </div>
@@ -283,7 +352,7 @@
                   <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                     <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
                   </svg>
-                    Demo Video</button>
+                    Demo</button>
           </div>
         </div>
       </div>
