--- a/index.html
+++ b/index.html
@@ -124,6 +124,44 @@
     <div class="project shadow mb-5 rounded bg-white ">
       <div class="row ">
         <div class="col-sm-12 col-md-4 ">
+          <div class="inner-project rounded d-none d-md-block " style="background-image:url( 'src/vrglobe.jpg' ); background-size: cover ">
+            <img src="src/overlay.svg " height=220px class="float-right " alt="SVG in einem image Tag ">
+          </div>
+        </div>
+        <div class="col-sm-0 col-md-8 ">
+          <div class="inner-project p-3 ">
+            <div class="row ">
+              <div class="col-10 ">
+                <h4>VR visualizing global time series</h4>
+              </div>
+              <div class="col-2 ">
+                <p class="text-right ">Sep 2018</p>
+              </div>
+            </div>
+            <p>Live import and visualization of global time series data for virtual reality. Data is projected onto a 3D globe and visualizes population densitiy for each country. </p>
+            <span class="badge badge-pill badge-dark ">Unity</span>
+            <span class="badge badge-pill badge-dark ">Middle-VR</span>
+            <span class="badge badge-pill badge-dark ">3D</span>
+            <span class="badge badge-pill badge-dark ">VR</span>
+            <span class="badge badge-pill badge-dark ">C#</span>
+            <button type="button " class="btn btn-light btn-sm float-right " onclick="window.open('static/VRGlobeDoku.pdf')">
+              <svg id="i-download " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                  <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30 " />
+                </svg>
+                Paper</button>
+            <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/wVpvF3OA8_c' ; ">
+                  <svg id="i-external " viewBox="0 0 32 32" height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                    <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
+                  </svg>
+                    Demo</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project shadow mb-5 rounded bg-white ">
+      <div class="row ">
+        <div class="col-sm-12 col-md-4 ">
           <div class="inner-project rounded d-none d-md-block " style="background-image:url( 'src/web.jpg' ); background-size: cover ">
             <img src="src/overlay.svg " height=220px class="float-right " alt="SVG in einem image Tag ">
           </div>
@@ -213,6 +251,12 @@
           42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z " />
                 </svg>
                 Source</button>
+
+                <button type="button " class="btn btn-light btn-sm float-right " onclick="window.open('static/ZwinderDoku.pdf')">
+                  <svg id="i-download " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
+                      <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30 " />
+                    </svg>
+                    Paper</button>
 
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://youtu.be/eBUVMyqWFP0' ; ">
                   <svg id="i-external " viewBox="0 0 32 32" height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
@@ -312,7 +356,7 @@
               <svg id="i-download " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                   <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30 " />
                 </svg>
-                Documentation</button>
+                Paper</button>
             <button type="button " class="btn btn-light btn-sm float-right " onclick="location.href='https://www.youtube.com/watch?v=H6mwCCYqlZo' ; ">
                 <svg id="i-external " viewBox="0 0 32 32 " height="18px" fill="none " stroke="currentcolor " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 ">
                   <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18 " />
